Add js code to remove the book container when it is empty

--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
   background-color: #ddd;
 }
 
+.hide {
+  display: none;
+}
+
 .book {
   display: flex;
   justify-content: space-between;
