--- a/style.css
+++ b/style.css
@@ -81,6 +81,19 @@ body {
   color: black;
 }
 
+.copyright {
+  border: solid black;
+  padding: 2vh 2vw;
+  font-weight: 700;
+  margin-top: 10px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media screen and (min-width: 768px) {
   .title,
   .author {
