Style time container

--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ body {
   align-items: center;
 }
 
+.time-date-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 @media screen and (min-width: 768px) {
   .title,
   .author {
