Add and change the content of the page

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 /* section: add book */
 .add-books {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 }
@@ -89,7 +89,7 @@ body {
 }
 
 .contact-info {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 }
