--- a/style.css
+++ b/style.css
@@ -99,6 +99,10 @@ body {
   justify-content: flex-end;
 }
 
+.error {
+  color: red;
+}
+
 @media screen and (min-width: 768px) {
   .title,
   .author {
