--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 1vw;
   font-family: sans-serif;
+  height: 100vh;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .all-books h1 {
